[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://MapsRelated/MapList/Map_Memories/GUI/MemorySummary/MemorySummaryGUI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 1 )

[node name="MemorySummaryGUI" type="Control"]
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 2 )

[node name="MainContainer" type="MarginContainer" parent="."]
margin_right = 960.0
margin_bottom = 540.0
custom_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer"]
margin_top = 20.0
margin_right = 960.0
margin_bottom = 540.0
custom_constants/separation = 20

[node name="HeaderContainer" type="MarginContainer" parent="MainContainer/VBoxContainer"]
margin_right = 960.0
margin_bottom = 68.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/VBoxContainer/HeaderContainer"]
margin_right = 960.0
margin_bottom = 68.0
mouse_filter = 2

[node name="Header" type="Label" parent="MainContainer/VBoxContainer/HeaderContainer/VBoxContainer"]
margin_right = 960.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 1 )
text = "Memories"
align = 1

[node name="Header2" type="Label" parent="MainContainer/VBoxContainer/HeaderContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 960.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 2 )
text = "The \"Current\" shows the sacrifices you will receive this playthrough.
The \"Future\" shows the sacrifices you have made for the next playthrough."
align = 1

[node name="ContentContainer" type="MarginContainer" parent="MainContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 960.0
margin_bottom = 108.0
custom_constants/margin_top = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/VBoxContainer/ContentContainer"]
margin_top = 20.0
margin_right = 960.0
margin_bottom = 20.0

[node name="PastFutureContainer" type="MarginContainer" parent="MainContainer/VBoxContainer/ContentContainer/HBoxContainer"]
margin_right = 150.0
rect_min_size = Vector2( 150, 0 )

[node name="LabelContainer" type="Control" parent="MainContainer/VBoxContainer/ContentContainer/HBoxContainer/PastFutureContainer"]
margin_right = 150.0

[node name="CurrentLabel" type="Label" parent="MainContainer/VBoxContainer/ContentContainer/HBoxContainer/PastFutureContainer/LabelContainer"]
margin_right = 56.0
margin_bottom = 15.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 3 )
text = "Current"

[node name="FutureLabel" type="Label" parent="MainContainer/VBoxContainer/ContentContainer/HBoxContainer/PastFutureContainer/LabelContainer"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 3 )
text = "Future"

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/VBoxContainer/ContentContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 154.0

[node name="MemSummaryStageRoundColumnContainer" type="HBoxContainer" parent="MainContainer/VBoxContainer/ContentContainer/HBoxContainer/VBoxContainer"]
custom_constants/separation = 0
